--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -38,7 +38,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/cmdBoton"
-            android:text="@string/Saludar" />
+            android:text="@string/Saludar"
+            android:onClick="saludar" />
 
         <TextView
             android:layout_width="match_parent"
